kuma-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-demo-ingress
  namespace: kuma-demo-ingress
spec:
  ingressClassName: kong
  rules:
    - host: kuma-demo.apps.k8s.vdude.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-app
                port:
                  number: 5000
